# survival

./: .gitignore  .gitmodules  Cargo.toml  build.rs
resources/: display_config.ron  game_settings.ron  input.ron
resources/data/: body.ron  items.ron  test.items.ron
resources/spritesheets/: Bisasam_16x16.ron  Bisasam_24x24.ron  cp437_20x20.ron  tileset_16x16.ron
resources/ui/: example.ron  inventory.ron  main_ui.ron
specs-static/: Cargo.toml
specs-static/src/: lib.rs
src/: actions.rs  bitflags_serial.rs  chunk.rs  components.rs  entity.rs  game_data.rs  goap.rs  imgui.rs  inventory.rs  lib.rs  main.rs  settings.rs  specs_static.rs  system_chain.rs  tiles.rs  utils.rs  visibility.rs
src/assets/: body.rs  item.rs  loader.rs  mod.rs
src/components/: actions.rs  mod.rs
src/events/: enter_world.rs  event_chain.rs  init_assets.rs  mod.rs
src/initializers/: mod.rs
src/mapgen/: mod.rs
src/render/: mod.rs  tile_chunk.rs
src/render/entity_pass/: mod.rs  pass.rs  sprite_f.glsl  sprite_v.glsl
src/render/flat_specs/: mod.rs  sprite_v.glsl
src/render/tile_pass/: mod.rs  pass.rs  specs.rs
src/render/tiles/: interleaved.rs  mod.rs  sprite_f.glsl  sprite_v.glsl  util.rs
src/states/: example.rs  first_load.rs  level.rs  mod.rs  paused.rs  running.rs
src/systems/: __minimal.rs  chunk.rs  debug.rs  dropped_item.rs  entity_chunk.rs  handle_pickup.rs  imgui.rs  initiative.rs  input.rs  mod.rs  movement.rs  nutrition.rs  script.rs  tile_position.rs  time.rs  ui.rs  wearing.rs
src/systems/ui/: imgui.rs  inventory_window.rs  mod.rs  ui.rs
tests/: nutrition_system.rs  time_system.rs
tools/terrain_generator/: main.rs
tools/terrain_generator/resources/: display_config.ron
