[package]
name = "survival"
version = "0.1.0"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = { path = "dep/amethyst", features = ["nightly", "saveload"] }
amethyst-imgui = { path = "dep/amethyst-imgui" }
specs-static = { path = "specs-static" }
specs-derive = "*"

rayon = { version = "1.0.0" }
rayon-hash = "*"
crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam.git" }

gfx = { version = "0.17.1", features = ["serialize"] }
gfx_core = { version = "0.9.0", features = ["serialize"] }
glsl-layout = { version = "0.1.1", features = ["gfx"] }
winit = { version = "0.18.1" }
derivative = "*"
bitflags = "1.0"
hibitset = { version = "*", features = ["parallel"] }

strum = "*"
strum_macros = "*"

# Logging
slog = { version = "2", features = ["max_level_trace"] }
slog-async = "*"
slog-term = "*"

# For Mapgen/procedural
voronoi = { path = "dep/voronoi" }
delaunay2d = { path = "dep/delaunay2d" }
noise = "*"
rand = "*"
ordered-float = "*"
num-traits = "*"
tiled = "*"
itertools = "*"
image = "0.21.0"
imageproc = "0.18.0"
sha2 = "*"
arrayref = "*"

# Game Related
rlua = { path = "dep/rlua" }
pathfinding = "*"
petgraph = { version="*", features = ["serde-1"] }

# Serialization
serde = { version = "*", features = ["derive", "rc"] }
ron = "*"

[dev-dependencies]
amethyst_test = { path = "dep/amethyst/amethyst_test" }

[build-dependencies]
image = "0.21.0"
serde = { version = "*", features = ["derive"] }
ron = "*"

[[bin]]
name = "survival_game"
path = "src/main.rs"

[[bin]]
name = "terrain_generator"
path = "tools/terrain_generator/main.rs"

[lib]
name = "survival"
path = "src/lib.rs"

