[package]
name = "survival"
version = "0.1.0"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"

[features]
default = ["req"]
req = ["parking_lot/nightly"]
pretty-save = ["req"]
no-save = ["req"]

[dependencies]
amethyst = { path = "dep/amethyst", features = ["nightly", "saveload"] }
amethyst-imgui = { path = "dep/amethyst-imgui" }
specs-derive = "*"
shred-derive = "*"
shred = "*"
parking_lot = "0.7.1"

rayon = { version = "1.0.0" }
rayon-hash = "*"
crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam.git" }
hashbrown = "0.1.8"
gfx = { version = "0.17.1", features = ["serialize"] }
gfx_core = { version = "0.9.0", features = ["serialize"] }
glsl-layout = { version = "0.1.1", features = ["gfx"] }
winit = { version = "0.18.1" }
derivative = "*"
bitflags = "1.0"
hibitset = { version = "*", features = ["parallel"] }

strum = "*"
strum_macros = "*"

# Logging
log = "0.4.6"

# For Mapgen/procedural
voronoi = { path = "dep/voronoi" }
delaunay2d = { path = "dep/delaunay2d" }
noise = "*"
rand = "*"
ordered-float = "*"
num-traits = "*"
itertools = "*"
image = "0.21.0"
imageproc = "0.18.0"
sha2 = "*"
arrayref = "*"

# Game Related
petgraph = { version="*", features = ["serde-1"] }

# Serialization
serde = { version = "*", features = ["derive", "rc"] }
ron = "*"

[dev-dependencies]
amethyst_test = { path = "dep/amethyst/amethyst_test" }

[build-dependencies]
image = "0.21.0"
serde = { version = "*", features = ["derive"] }
amethyst_renderer = { path = "dep/amethyst/amethyst_renderer" }
ron = "*"

[[bin]]
name = "survival_game"
path = "src/main.rs"

[[bin]]
name = "terrain_generator"
path = "tools/terrain_generator/main.rs"

[lib]
name = "survival"
path = "src/lib.rs"

