[package]
name = "survival"
version = "0.1.0"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"

[features]
default = ["parking_lot/nightly", "no-save", "silent-load"]
pretty-save = []
no-save = []
tools = ["amethyst-imgui", "voronoi", "delaunay2d", "mapgen", "arrayref"]
mapgen = ["ordered-float", "image", "sha2", "imageproc", "rayon", "rayon-hash"]
silent-load = []

[dependencies]
amethyst = {git = "https://github.com/jaynus/amethyst.git", features = ["nightly", "saveload"]}
approx = "0.3.2"
bitflags = "1.0"
derivative = "*"
gfx = {version = "0.17.1", features = ["serialize"]}
gfx_core = {version = "0.9.0", features = ["serialize"]}
glsl-layout = {version = "0.1.1", features = ["gfx"]}
hashbrown = "0.1.8"
hibitset = {version = "*", features = ["parallel"]}
log = "0.4.6"
num-traits = "*"
parking_lot = "^0.6"
petgraph = {version="*", features = ["serde-1"]}
serde = {version = "*", features = ["derive", "rc"]}
specs-derive = "*"
shred = "*"
shred-derive = "*"
strum = "*"
strum_macros = "*"
rand = "^0.6"
ron = "*"
nphysics2d = "^0.11"
ncollide2d = "^0.19"
array-init = "^0.0.4"

# Other dependencies (mapgen and terrain tools)
amethyst-imgui = {path = "dep/amethyst-imgui", optional = true}
rayon = {version = "1.0.0", optional = true}
rayon-hash = {version = "*", optional = true}
voronoi = {path = "dep/voronoi", optional = true}
delaunay2d = {path = "dep/delaunay2d", optional = true}
ordered-float = {version = "*", optional = true}
image = {version = "0.21.0", optional = true}
imageproc = {version = "0.18.0", optional = true}
sha2 = {version = "*", optional = true}
arrayref = {version = "*", optional = true}

[build-dependencies]
image = "0.21.0"
serde = {version = "*", features = ["derive"]}
amethyst = {git = "https://github.com/jaynus/amethyst.git", features = ["nightly", "saveload"]}
ron = "*"

[[bin]]
name = "game"
path = "src/main.rs"

[[bin]]
name = "terrain_generator"
path = "tools/terrain_generator/main.rs"
required-features = ["tools"]

[lib]
name = "survival"
path = "src/lib.rs"

